--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
     "express": "^4.16.3",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
   "repository": {
