--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "config": "^2.0.1",
     "express": "^4.16.3",
-    "request": "^2.87.0",
-    "xmlhttprequest": "^1.8.0"
+    "request": "^2.87.0"
   },
   "devDependencies": {},
   "repository": {
