--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+Discord/node_modules/
+Messenger/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
