--- a/Discord/package.json
+++ b/Discord/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "publishheroku": "cd ../ && git subtree push --prefix Discord weather-bot-56518 master || true"
   },
   "author": "",
   "license": "ISC",
