--- a/Messenger/.gitignore
+++ b/Messenger/.gitignore
@@ -33,8 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-Discord/node_modules/
-Messenger/node_modules/
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
