--- a/Messenger/package.json
+++ b/Messenger/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "publishheroku": "cd ../ && git subtree push --prefix Messenger weather-bot-56517 master || true"
+    "publishheroku": "cd ../ && git subtree push --prefix Messenger messenger master || true"
   },
   "author": "",
   "license": "ISC",
