--- a/Discord/package.json
+++ b/Discord/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "publishheroku": "cd ../ && git subtree push --prefix Discord weather-bot-56518 master || true"
+    "publishheroku": "cd ../ && git subtree push --prefix Discord discord master || true"
   },
   "author": "",
   "license": "ISC",
